Switch to Observable based AuxiliaryPane controls

--- a/src/main/resources/css/jarvis.css
+++ b/src/main/resources/css/jarvis.css
@@ -99,6 +99,10 @@
 
 /* ---------- Auxiliary Pane ---------- */
 
+.auxiliary-container {
+    -fx-padding: 0;
+}
+
 .auxiliary-pane {
     -fx-background-color: -base;
     -fx-border-color: -mantle;
