--- a/src/main/resources/css/jarvis.css
+++ b/src/main/resources/css/jarvis.css
@@ -3,6 +3,10 @@
 /* ---------- Colors ---------- */
 * {
     -methods: #fd9842;
+    -types: #528541;
+    -var-name: #9775a9;
+    -value: #BBBBBB;
+
     -highlight: #0D293E;
     -accent: #30c7f5;
 
@@ -27,15 +31,51 @@
 * {
     -fx-font-family: "Segoe UI";
     -fx-font-size: 12;
+    -fx-text-fill: -font-base;
 }
 
-/* ---------- Split Pane Dividers ---------- */
+/* ---------- Text Coloring Classes ---------- */
+
+.simple-type {
+    -fx-text-fill: -types;
+}
+
+.var-name {
+    -fx-text-fill: -var-name;
+}
+
+.value {
+    -fx-text-fill: -value;
+}
+
+/* ---------- CustomizableTitledPane ---------- */
+
+.customizable-titled-pane-header {
+    -fx-alignment: center-left;
+    -fx-padding: 0;
+}
+
+/* ---------- ListView ---------- */
+
+.list-cell:filled:selected:focused, .list-cell:filled:selected {
+    -fx-background-color: -highlight;
+}
+
+.list-cell {
+    -fx-background-color: -base;
+    -fx-padding: 0;
+}
+
+.list-cell:filled:hover {
+    -fx-background-color: -mantle;
+}
+
+/* ---------- Controls ---------- */
 
 .split-pane-divider {
     -fx-background-color: -crust;
 }
 
-/* ---------- Controls ---------- */
 
 .button {
     -fx-background-color: transparent;
@@ -199,21 +239,13 @@
     -fx-faint-focus-color: transparent;
 }
 
-.list-cell:filled:selected:focused, .list-cell:filled:selected {
-    -fx-background-color: -highlight;
-}
-
-.list-cell:even, .list-cell:odd {
-    -fx-background-color: -base;
-}
-
-.list-cell:filled:hover {
-    -fx-background-color: -mantle;
-}
-
-.call-stack-cell-container {
+.call-stack-cell-container .customizable-titled-pane-header {
     -fx-alignment: center-left;
     -fx-spacing: 5;
+}
+
+.call-stack-cell-container .customizable-titled-pane-header .button {
+    -fx-padding: 5;
 }
 
 .method-name {
@@ -229,6 +261,15 @@
 .line-number {
     -fx-text-fill: -accent;
     -fx-font-size: 10;
+}
+
+.properties-list {
+    -fx-alignment: center-left;
+}
+
+.property-cell {
+    -fx-spacing: 5;
+    -fx-padding: 0 0 0 25;
 }
 
 /* ---------- Status Bar (BOTTOM) ---------- */
