--- a/src/main/resources/css/jarvis.css
+++ b/src/main/resources/css/jarvis.css
@@ -28,7 +28,7 @@
 }
 
 /* ---------- Global Presets ---------- */
-* {
+.label {
     -fx-font-family: "Segoe UI";
     -fx-font-size: 12;
     -fx-text-fill: -font-base;
