--- a/src/main/resources/css/jarvis.css
+++ b/src/main/resources/css/jarvis.css
@@ -175,16 +175,34 @@
     -fx-border-width: 1;
 }
 
-.graph-cell {
+.graph-node {
     -fx-background-color: #D6FFFF;
     -fx-border-color: #94DBDB;
+    -fx-alignment: center-left;
     -fx-border-width: 1;
     -fx-border-radius: 10;
+    -fx-background-radius: 10;
+    -fx-spacing: 5;
+    -fx-padding: 5;
 }
 
-.cell-members {
+.members-container {
     -fx-background-color: white;
+    -fx-background-radius: 5;
+    -fx-padding: 5;
+    -fx-spacing: 5;
+}
+
+.graph-node > .label,
+.members-container > .label {
+    -fx-font-family: "Lucida Console";
+    -fx-text-fill: black;
+}
+
+.member-entry {
+    -fx-border-color: #66FFFF;
     -fx-border-radius: 10;
+    -fx-padding: 5 10 5 10;
 }
 
 .cell-member {
